# cmag

./: .editorconfig  .hgignore  CMakeLists.txt  MAG_vs100.sln  MAG_vs90.sln  ProjectHome.md  readme.txt
Beam/: Beam.sln
Beam/Beam/: Beam.vcproj  main.cpp  render_particles.h
Beam/BeamCore/: BeamCore.vcproj  beamSystem.cpp  beamSystem.cu  beamSystem.cuh  beamSystem.h  beam_kernel.cu  beam_kernel.cuh
Beam/BeamTest/: BeamTest.vcproj  BeamTest_vs90.vcproj  StartTest.cpp  SystemFunctionalTest.cpp
CMake/: FindGLEW.cmake  FindGLUT.cmake
CUDA/: MAG_vs90.sln  readme.txt  test.txt
CUDA/DamBreak.Core/: fluidSystem.cu  fluidSystem.h  fluid_kernel.cuh
CUDA/DamBreak.Demo/: Demo_vs90.vcproj  main.cpp
CUDA/DamBreak.Report/: Report_vs90.vcproj  YFrontTest.cpp  dump.m  main.cc
Common/: CMakeLists.txt  helper_timer.h
DamBreak.Core/: CMakeLists.txt  Core_vs90.vcproj  fluidSystem.cpp  fluidSystem.cu  fluidSystem.cuh  fluid_kernel.cu
DamBreak.Demo/: CMakeLists.txt  Demo_vs90.vcproj  main.cpp
DamBreak.Report/: CMakeLists.txt  CheckDensity.cpp  DamBreak.mw  Report_vs90.vcproj  XFrontTest.cpp  XFrontTest.h  YFrontTest.h  dump.h  exporteps.m  main.cc  main.cpp
MAG.CUDA.Beam/: Beam_vs100.vcxproj  MAG.CUDA.Beam_vs100.vcxproj  MAG.CUDA.Beam_vs100.vcxproj.filters  MAG.CUDA.Beam_vs90.vcproj  main.cpp  shaders.cpp
MAG.CUDA.BeamCore/: BeamCore_vs100.vcxproj  MAG.CUDA.BeamCore_vs100.vcxproj  MAG.CUDA.BeamCore_vs100.vcxproj.filters  MAG.CUDA.BeamCore_vs90.vcproj  beamSystem.cpp  beamSystem.cu  beamSystem.cuh  beamSystem.h  beam_kernel.cu  beam_kernel.cuh
MAG.CUDA.Fluid/: MAG.CUDA.Fluid.vcproj  main.cpp  render_particles.cpp  render_particles.h  shaders.cpp  shaders.h
MAG.CUDA.FluidCore/: MAG.CUDA.FluidCore.vcproj  fluidSystem.cpp  fluidSystem.cu  fluidSystem.cuh  fluidSystem.h  fluid_kernel.cu  fluid_kernel.cuh
MAG.CUDA.Infrastructure/: MAG.CUDA.Infrastructure.vcproj  render_particles.cpp
MAG.CUDA.Test/: StartTest.cpp  SystemFunctionalTest.cpp
Peristalsis.Core/: Core_vs90.vcproj  PeristalsisKernel.cu  PeristalsisSystem.cpp  PeristalsisSystem.h
Peristalsis.Demo/: Demo_vs90.vcproj  main.cpp
Peristalsis.Report/: Report_vs90.vcproj  main.cc
Poiseuille.Core/: CMakeLists.txt  Core_vs90.vcproj  helper_timer.h  poiseuilleFlowKernel.cu  poiseuilleFlowSystem.cpp  poiseuilleFlowSystem.cu  poiseuilleFlowSystem.h
Poiseuille.Demo/: CMakeLists.txt  Demo_vs90.vcproj  main.cpp  render_particles.cpp  render_particles.h
Poiseuille.Report/: CMakeLists.txt  Report_vs90.vcproj  XVelocityYPosition.m  dump.h  main.cpp  maple.bat
cmake/: FindGLUT.cmake
(+135 files in other folders)
